# openai-rs

./: .gitignore  Cargo.toml
aiochatgpt/: Cargo.toml
aiochatgpt/examples/: stream.rs
aiochatgpt/src/: chat.rs  chunk.rs  client.rs  lib.rs
