[package]
name = "aiochatgpt"
description = "A Openai chatbot"
version = "0.1.0"
edition = "2021"

license.workspace = true
repository.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.16", features = ["json", "stream"] }
bytes = "1.4.0"
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
tokenizers = "0.13.2"
futures = { version = "0.3.18" }
lazy_static = "1.4.0"
serde_json = "1.0.95"
